<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_header"
        android:id="@+id/head"/>


    <ScrollView
        android:layout_below="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20dp">


            <TextView
                android:id="@+id/tv_login"
                style="@style/BoldTextViewExtraLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_signup"
                android:textSize="@dimen/font_34sp" />


            <EditText
                android:id="@+id/et_first_name"
                style="@style/RegularEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:hint="@string/text_first_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_last_name"
                style="@style/RegularEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:hint="@string/text_last_name"
                android:inputType="text" />

            <TextView
                style="@style/BoldTextViewExtraLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:gravity="center"
                android:text="@string/text_i_am_a"
                android:textSize="@dimen/font_30sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_male"
                    style="@style/TextViewRegular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:drawableTop="@drawable/ic_gender_man"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:paddingTop="@dimen/margin_20dp"
                    android:paddingEnd="@dimen/margin_10dp"
                    android:paddingStart="@dimen/margin_10dp"
                    android:paddingBottom="@dimen/margin_10dp"
                    android:text="@string/text_male"
                    android:textColor="@color/colorGray" />

                <TextView
                    android:id="@+id/tv_female"
                    style="@style/TextViewRegular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:drawableTop="@drawable/ic_gender_women"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:paddingTop="@dimen/margin_20dp"
                    android:paddingEnd="@dimen/margin_10dp"
                    android:paddingStart="@dimen/margin_10dp"
                    android:paddingBottom="@dimen/margin_10dp"
                    android:text="@string/text_female"
                    android:textColor="@color/colorGray" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_contact_lable"
                style="@style/TextViewRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/margin_10dp"
                android:text="@string/text_contact_number"
                android:textColor="@color/fontBlack" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_country_code"
                    style="@style/TextViewRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_10dp"
                    android:text="+91"
                    android:textColor="@color/fontBlack" />

                <EditText
                    android:id="@+id/et_contact_number"
                    style="@style/RegularEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_password_lable"
                style="@style/TextViewRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/text_password"
                android:textColor="@color/fontBlack" />

            <EditText
                android:id="@+id/et_password"
                style="@style/RegularEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:inputType="textPassword" />


            <RelativeLayout
                android:id="@+id/rv_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/font_16sp"
                    android:textStyle="normal" />

                <ImageButton
                    android:id="@+id/iv_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:clickable="false"
                    android:paddingStart="@dimen/margin_5dp"
                    android:paddingEnd="@dimen/margin_10dp"
                    android:rotation="0"
                    android:src="@drawable/ic_drop_down" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_15dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />


            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:text="@string/text_class"
                        android:textColor="@color/fontBlack" />

                    <EditText
                        android:id="@+id/et_class"
                        style="@style/RegularEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:text="@string/text_section"
                        android:textColor="@color/fontBlack" />

                    <EditText
                        android:id="@+id/et_section"
                        style="@style/RegularEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp">

                <Button
                    android:id="@+id/btn_next"
                    style="@style/PrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:padding="@dimen/margin_10dp"
                    android:paddingStart="@dimen/margin_30dp"
                    android:paddingEnd="@dimen/margin_30dp"
                    android:text="@string/text_next"
                    android:textAllCaps="false"
                    android:textSize="@dimen/font_18sp" />
                <ProgressBar
                    android:id="@+id/pb"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </RelativeLayout>



        </LinearLayout>

    </ScrollView>

    <include layout="@layout/layout_common_circular_progressbar"/>
</RelativeLayout>