<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_header"
        android:id="@+id/head"/>


    <ScrollView
        android:layout_below="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20dp">

            <TextView
                style="@style/BoldTextViewExtraLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_verify_contact_number"
                android:textColor="@color/fontBlack"
                android:textSize="@dimen/font_22sp" />

            <TextView
                style="@style/BoldTextViewExtraLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_enter_otp"
                android:textColor="@color/fontBlack"
                android:textSize="@dimen/font_22sp" />

            <TextView
                android:id="@+id/tv_number"
                style="@style/BoldTextViewExtraLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorGray"
                android:textSize="@dimen/font_20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="vertical">


                <com.studentapp.utils.PinView
                    android:id="@+id/otp_view"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:padding="@dimen/margin_20dp"
                    android:textColor="@color/fontBlack"
                    android:textSize="@dimen/font_16sp"
                    app:cursorColor="@color/colorGray"
                    app:cursorWidth="2dp"
                    app:itemCount="6"
                    app:itemHeight="@dimen/margin_40dp"
                    app:itemRadius="@dimen/margin_5dp"
                    app:itemSpacing="@dimen/margin_5dp"
                    app:itemWidth="@dimen/margin_40dp"
                    app:lineColor="@color/colorGray"
                    app:lineWidth="2dp"
                    app:viewType="rectangle" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_resend"
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20dp"
                android:gravity="center"
                android:padding="@dimen/margin_10dp"
                android:paddingStart="@dimen/margin_30dp"
                android:paddingEnd="@dimen/margin_30dp"
                android:text="@string/text_resent_code"
                android:textAllCaps="false"
                android:textSize="@dimen/font_16sp" />

            <Button
                android:id="@+id/btn_next"
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20dp"
                android:gravity="center"
                android:padding="@dimen/margin_10dp"
                android:paddingStart="@dimen/margin_30dp"
                android:paddingEnd="@dimen/margin_30dp"
                android:text="@string/text_next"
                android:textAllCaps="false"
                android:textSize="@dimen/font_16sp" />


        </LinearLayout>

    </ScrollView>
    <include layout="@layout/layout_common_circular_progressbar"/>

</RelativeLayout>